[Test] to solve bug that causes the about me section to be bigger on small screens on the live version of the website

--- a/src/styling/components/_main.scss
+++ b/src/styling/components/_main.scss
@@ -70,7 +70,8 @@ main {
     }
 
     .about-me-container {
-        padding: 100px 20px;
+        padding: 0 20px;
+        //background-color: blue;
 
         .about-me {
             padding: 60px 0;
